5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1800_2566.log
== TEST (2019-06-08 18:06:29) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))

x = zeros(6, type = int)

s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0

for x in vet
	if(x == 2):
		s = s + 1
	elif(x == 3):
		t = t + 1
	elif(x == 4):
		qa = qa + 1
	elif(x == 5):
		qi = qi + 1
	elif(x == 6):
		se = se + 1
	elif(x == 7):
		sa = sa + 1

x[0] = round(s / size(vet) * 100, 1)
x[1] = round(t / size(vet) * 100, 1)
x[2] = round(qa / size(vet) * 100, 1)
x[3] = round(qi / size(vet) * 100, 1)
x[4] = round(se / size(vet) * 100, 1)
x[5] = round(sa / size(vet) * 100, 1)

print(x)
-- ERROR:
File "XXXX", line 14
    for x in vet
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:06:59) 
-- CODE:
from numpy import *

vet = array(eval(input("Insira o vetor: ")))

x = zeros(6, type = int)

s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0

for i in vet
	if(i == 2):
		s = s + 1
	elif(i == 3):
		t = t + 1
	elif(i == 4):
		qa = qa + 1
	elif(i == 5):
		qi = qi + 1
	elif(i == 6):
		se = se + 1
	elif(i == 7):
		sa = sa + 1

x[0] = round(s / size(vet) * 100, 1)
x[1] = round(t / size(vet) * 100, 1)
x[2] = round(qa / size(vet) * 100, 1)
x[3] = round(qi / size(vet) * 100, 1)
x[4] = round(se / size(vet) * 100, 1)
x[5] = round(sa / size(vet) * 100, 1)

print(x)
-- ERROR:
File "XXXX", line 14
    for i in vet
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:07:49) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o vetor: ")))

x = zeros(6, type = int)

s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0

for x in v
	if(x == 2):
		s = s + 1
	elif(x == 3):
		t = t + 1
	elif(x == 4):
		qa = qa + 1
	elif(x == 5):
		qi = qi + 1
	elif(x == 6):
		se = se + 1
	elif(x == 7):
		sa = sa + 1

x[0] = round(s / size(vet) * 100, 1)
x[1] = round(t / size(vet) * 100, 1)
x[2] = round(qa / size(vet) * 100, 1)
x[3] = round(qi / size(vet) * 100, 1)
x[4] = round(se / size(vet) * 100, 1)
x[5] = round(sa / size(vet) * 100, 1)

print(x)
-- ERROR:
File "XXXX", line 14
    for x in v
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:08:34) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o vetor: ")))

v1 = zeros(6, type = int)

s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0

for x in v
	if(x == 2):
		s = s + 1
	elif(x == 3):
		t = t + 1
	elif(x == 4):
		qa = qa + 1
	elif(x == 5):
		qi = qi + 1
	elif(x == 6):
		se = se + 1
	elif(x == 7):
		sa = sa + 1

v1[0] = round(s / size(vet) * 100, 1)
v1[1] = round(t / size(vet) * 100, 1)
v1[2] = round(qa / size(vet) * 100, 1)
v1[3] = round(qi / size(vet) * 100, 1)
v1[4] = round(se / size(vet) * 100, 1)
v1[5] = round(sa / size(vet) * 100, 1)

print(v1)
-- ERROR:
File "XXXX", line 14
    for x in v
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:09:03) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o vetor: ")))

v1 = zeros(6, type = int)

s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0

for x in v
	if(x == 2):
		s = s + 1
	elif(x == 3):
		t = t + 1
	elif(x == 4):
		qa = qa + 1
	elif(x == 5):
		qi = qi + 1
	elif(x == 6):
		se = se + 1
	elif(x == 7):
		sa = sa + 1

v1[0] = round(s / size(v) * 100, 1)
v1[1] = round(t / size(v) * 100, 1)
v1[2] = round(qa / size(v) * 100, 1)
v1[3] = round(qi / size(v) * 100, 1)
v1[4] = round(se / size(v) * 100, 1)
v1[5] = round(sa / size(v) * 100, 1)

print(v1)
-- ERROR:
File "XXXX", line 14
    for x in v
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:09:33) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o vetor: ")))

v1 = zeros(6)

s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0

for x in v:
	if(x == 2):
		s = s + 1
	elif(x == 3):
		t = t + 1
	elif(x == 4):
		qa = qa + 1
	elif(x == 5):
		qi = qi + 1
	elif(x == 6):
		se = se + 1
	elif(x == 7):
		sa = sa + 1

v1[0] = round(s / size(v) * 100, 1)
v1[1] = round(t / size(v) * 100, 1)
v1[2] = round(qa / size(v) * 100, 1)
v1[3] = round(qi / size(v) * 100, 1)
v1[4] = round(se / size(v) * 100, 1)
v1[5] = round(sa / size(v) * 100, 1)

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 18:10:02) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o vetor: ")))

v1 = zeros(6)

s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0

for x in v:
	if(x == 2):
		s = s + 1
	elif(x == 3):
		t = t + 1
	elif(x == 4):
		qa = qa + 1
	elif(x == 5):
		qi = qi + 1
	elif(x == 6):
		se = se + 1
	elif(x == 7):
		sa = sa + 1

v1[0] = round(s / size(v) * 100, 1)
v1[1] = round(t / size(v) * 100, 1)
v1[2] = round(qa / size(v) * 100, 1)
v1[3] = round(qi / size(v) * 100, 1)
v1[4] = round(se / size(v) * 100, 1)
v1[5] = round(sa / size(v) * 100, 1)

print(v1)
-- EXECUTION TIME:
0.82791
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
